Header work in progress

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,6 +9,14 @@
 // Make sure the charset is set appropriately
 @charset "UTF-8"
 
+$roboto: "Roboto", sans-serif
+
+$lightgray: #575756
+$darkgray: #333
+$red: #9b132e
+$lightblue: #0077a8
+
+
 // This includes all of the foundation global elements that are needed to work with any of the other files.
 @import normalize
 @import foundation/variables
@@ -50,3 +58,6 @@
 // @import foundation/components/thumbs
 // @import foundation/components/tooltips
 @import foundation/components/dropdown
+
+
+@import header
