--- a/sass/foundation/_variables.sass
+++ b/sass/foundation/_variables.sass
@@ -62,8 +62,8 @@ $em-base: 16px !default
 $default-float: left
 
 // $body-bg: #fff;
-// $body-font-color: #222;
-// $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-color: #333
+$body-font-family: $roboto
 // $body-font-weight: normal;
 // $body-font-style: normal;
 
@@ -123,16 +123,16 @@ $default-float: left
 
 // Media Queries
 
-// $small-screen: 768px;
-// $medium-screen: 1280px;
-// $large-screen: 1440px;
+$small-screen: 768px
+$medium-screen: 1020px
+$large-screen: 1020px
 
-// $screen: "only screen";
-// $small: "only screen and (min-width: #{$small-screen})";
-// $medium: "only screen and (min-width: #{$medium-screen})";
-// $large: "only screen and (min-width: #{$large-screen})";
-// $landscape: "only screen and (orientation: landscape)";
-// $portrait: "only screen and (orientation: portrait)";
+$screen: "only screen"
+$small: "only screen and (min-width: #{$small-screen})"
+$medium: "only screen and (min-width: #{$medium-screen})"
+$large: "only screen and (min-width: #{$large-screen})"
+$landscape: "only screen and (orientation: landscape)"
+$portrait: "only screen and (orientation: portrait)"
 
 //// Cursors
 
@@ -147,9 +147,9 @@ $default-float: left
 // Grid Variables
 //
 
-// $row-width: em-calc(1000);
-// $column-gutter: em-calc(30);
-// $total-columns: 12;
+$row-width: em-calc(1000)
+$column-gutter: em-calc(30)
+$total-columns: 12
 
 //
 // Block Grid Variables
@@ -170,10 +170,10 @@ $default-float: left
 
 // Control header font styles
 
-// $header-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-// $header-font-weight: bold;
+$header-font-family: $roboto
+$header-font-weight: normal
 // $header-font-style: normal;
-// $header-font-color: #222;
+$header-font-color: #000
 // $header-line-height: 1.4;
 // $header-top-margin: .2em;
 // $header-bottom-margin: .5em;
@@ -181,8 +181,8 @@ $default-float: left
 
 // Control header font sizes
 
-// $h1-font-size: em-calc(44);
-// $h2-font-size: em-calc(37);
+$h1-font-size: em-calc(52)
+$h2-font-size: em-calc(36)
 // $h3-font-size: em-calc(27);
 // $h4-font-size: em-calc(23);
 // $h5-font-size: em-calc(18);
