Header, footer and front page done

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -15,7 +15,7 @@ $lightgray: #575756
 $darkgray: #333
 $red: #9b132e
 $lightblue: #0077a8
-
+$gray-n: #abafb4
 
 // This includes all of the foundation global elements that are needed to work with any of the other files.
 @import normalize
@@ -28,7 +28,7 @@ $lightblue: #0077a8
 @import foundation/components/visibility
 // @import foundation/components/block-grid
 @import foundation/components/type
-// @import foundation/components/buttons
+@import foundation/components/buttons
 // @import foundation/components/forms
 // @import foundation/components/button-groups
 // @import foundation/components/dropdown-buttons
@@ -61,3 +61,5 @@ $lightblue: #0077a8
 
 
 @import header
+@import frontpage
+@import footer
