--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,8 +1,11 @@
 body
+	background: #373737
 	> header
+		z-index: 3
+		position: relative
+		// background: white
 		.heading
 			padding: em-calc(32) 0
-
 #logo
 	font-size: em-calc(26)
 	color: $lightgray
@@ -37,37 +40,46 @@ body
 			a
 				color: white
 			>.sub-menu
+				+grid-row()
 				display: block
+				&:before, &:after
+					position: absolute
+					top: 0
+					bottom: 0
+					width: 2000px
+					background: $lightblue
+					display: block
+					content: ' '
+					z-index: -1
+				&:before
+					left: -2000px
+				&:after
+					right: -2000px
 		&>.sub-menu
 			display: none
 			background-color: $lightblue
 			+clearfix
-			// position: absolute
-			// top: em-calc(60)
+			position: absolute
 			left: 0
+			margin-left: -2000px
 			&>li
-				// width: 100px
-				float: left
-				// max-height: 100px
+				+grid-column(2)
 				&>ul
 					display: none
-.wrap-subnav
-	position: relative
-	+clearfix
-	.primary-nav-bg
-		background-color: #373737
-		position: absolute
-		top: 0
-		left: 0
-		width: 100%
-		height: em-calc(60)
-		z-index: 9
-	.secondary-nav-bg
-		position: absolute
-		top: 0
-		left: 0
-		width: 100%
-		height: 100%
-		background-color: $lightblue
-		z-index: 8
+.primary-nav-bg
+	background-color: #373737
+	.home &
+		background-color: rgba( 37,37,37,0.6 )
+		margin-bottom: -60px
 
+.heading-bg
+	background-color: white
+
+.secondary-nav-bg
+	position: absolute
+	top: 0
+	left: 0
+	width: 100%
+	height: 100%
+	background-color: $lightblue
+	z-index: 8
