Started page design, added breadcrumb

--- a/sass/foundation/_variables.sass
+++ b/sass/foundation/_variables.sass
@@ -183,7 +183,7 @@ $header-font-color: #000
 
 $h1-font-size: em-calc(52)
 $h2-font-size: em-calc(36)
-// $h3-font-size: em-calc(27);
+$h3-font-size: em-calc(24);
 // $h4-font-size: em-calc(23);
 // $h5-font-size: em-calc(18);
 // $h6-font-size: 1em;
