WIP, page styling

--- a/sass/foundation/_variables.sass
+++ b/sass/foundation/_variables.sass
@@ -183,7 +183,7 @@ $header-font-color: #000
 
 $h1-font-size: em-calc(52)
 $h2-font-size: em-calc(36)
-$h3-font-size: em-calc(24);
+$h3-font-size: em-calc(24)
 // $h4-font-size: em-calc(23);
 // $h5-font-size: em-calc(18);
 // $h6-font-size: 1em;
@@ -234,9 +234,9 @@ $h3-font-size: em-calc(24);
 
 // Style lists
 
-// $list-style-position: outside;
-// $list-side-margin: 0;
-// $list-nested-margin: em-calc(20);
+$list-style-position: outside
+$list-side-margin: 40px
+$list-nested-margin: em-calc(40)
 // $definition-list-header-weight: bold;
 // $definition-list-header-margin-bottom: .3em;
 // $definition-list-margin-bottom: em-calc(12);
