--- a/sass/style.sass
+++ b/sass/style.sass
@@ -59,7 +59,7 @@ $gray-n: #abafb4
 // @import foundation/components/tooltips
 @import foundation/components/dropdown
 
-
+@import global
 @import header
 @import frontpage
 @import footer
