--- a/sass/_page.sass
+++ b/sass/_page.sass
@@ -4,8 +4,7 @@
 
 
 .hentry
-
 	ul
-		color: red
-		&::marker
-			// color: red
+		list-style-image: url(images/bullet.svg)
+		li
+			padding-left: 4px
