--- a/sass/foundation/_variables.sass
+++ b/sass/foundation/_variables.sass
@@ -235,7 +235,7 @@ $h3-font-size: em-calc(24)
 // Style lists
 
 $list-style-position: outside
-$list-side-margin: 40px
+$list-side-margin: em-calc(36)
 $list-nested-margin: em-calc(40)
 // $definition-list-header-weight: bold;
 // $definition-list-header-margin-bottom: .3em;
@@ -243,8 +243,8 @@ $list-nested-margin: em-calc(40)
 
 // Style blockquotes
 
-// $blockquote-font-color: lighten($header-font-color, 30%);
-// $blockquote-padding: em-calc(9, 20, 0, 19);
+$blockquote-font-color: $darkgray
+// $blockquote-padding: em-calc(9, 20, 0, 19)
 // $blockquote-border: 1px solid #ddd;
 // $blockquote-cite-font-size: em-calc(13);
 // $blockquote-cite-font-color: lighten($header-font-color, 20%);
