Added admin, changed Gruntfile, jshint in
* jshint in
* admin styles now included and sassed
* automatic minification and concatenation done
* php helper functions added, templates modified

--- a/sass/foundation/_variables.sass
+++ b/sass/foundation/_variables.sass
@@ -62,8 +62,8 @@ $em-base: 16px !default
 $default-float: left
 
 // $body-bg: #fff;
-$body-font-color: #333
-$body-font-family: $roboto
+// $body-font-color: #333
+// $body-font-family: "Arial"
 // $body-font-weight: normal;
 // $body-font-style: normal;
 
@@ -170,7 +170,7 @@ $total-columns: 12
 
 // Control header font styles
 
-$header-font-family: $roboto
+// $header-font-family: $roboto
 $header-font-weight: normal
 // $header-font-style: normal;
 $header-font-color: #000
@@ -243,7 +243,7 @@ $list-nested-margin: em-calc(40)
 
 // Style blockquotes
 
-$blockquote-font-color: $darkgray
+// $blockquote-font-color: $darkgray
 // $blockquote-padding: em-calc(9, 20, 0, 19)
 // $blockquote-border: 1px solid #ddd;
 // $blockquote-cite-font-size: em-calc(13);
