--- a/functions/admin/sass/_adminnav.sass
+++ b/functions/admin/sass/_adminnav.sass
@@ -1,6 +1,8 @@
 html
+  *
+    box-sizing: border-box
   body.login
-    background: url(../images/login-bg.jpg)
+    background: url(images/login-bg.jpg)
     font-size: 16px
     #login_error
       position: absolute
@@ -17,7 +19,7 @@ html
       height: 510px
       margin: -255px 0 0 -255px
       padding: 60px 125px
-      background: url(../images/login-circle-bg.jpg) no-repeat center center
+      background: url(images/login-circle-bg.jpg) no-repeat center center
       .message
         @extend #login_error
       h1
@@ -28,7 +30,7 @@ html
           display: block
           margin: 0 auto
           padding: 0
-          background-image: url(../images/electric-studio-logo.png)
+          background-image: url(images/electric-studio-logo.png)
           background-repeat: no-repeat
           background-position: center center
           background-size: auto auto
@@ -49,7 +51,7 @@ html
         border: 1px solid #3d9cb3
         font-size: 1.25em
       input[type="submit"]
-        padding: 8px 24px
+        padding: 1px 24px
         background-image: linear-gradient(top, #525e61, #122b31)
         border: 1px solid #10252a
         border-radius: 3px
@@ -57,7 +59,7 @@ html
         text-shadow: -1px 0 0 #223033
       .forgetmenot
         padding: 8px 0 0 20px
-        background: url(../images/forgetmenot-bg.png) no-repeat 0 8px
+        background: url(images/forgetmenot-bg.png) no-repeat 0 8px
         line-height: 16px
         label
           margin: 0
