Revert "Commit before live": incorrectly added to the wrong repo by @lukeames
This reverts commit 35b06a5a66e21a11c9b7efbb022ff853066dc402.

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,21 +12,15 @@
 // This includes all of the foundation global elements that are needed to work with any of the other files.
 @import normalize
 @import foundation/variables
-@import header
-@import base
-@import home
 
-
-@media only screen and (min-width: 700px)
-	@import responsive/700
 // Foundation Components
 
 @import foundation/components/global
 @import foundation/components/grid
 @import foundation/components/visibility
 // @import foundation/components/block-grid
-// @import foundation/components/type
-// @import foundation/components/buttons
+@import foundation/components/type
+@import foundation/components/buttons
 // @import foundation/components/forms
 // @import foundation/components/button-groups
 // @import foundation/components/dropdown-buttons
