Added theme customizer and social icons

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -50,3 +50,5 @@
 // @import foundation/components/thumbs
 // @import foundation/components/tooltips
 @import foundation/components/dropdown
+
+@import social
